--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,33 +28,10 @@ jobs:
           pip install poetry
           poetry install
 
-      - name: Run tests and collect coverage
+      - name: Run tests 
         run: |
-          poetry run coverage run -m pytest .
-          poetry run coverage report -m
+          poetry run pytest . -v 
         env:
           CI: true
 
-  lint:
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
-
-      - name: Check code formatting with Ruff
-        run: poetry run ruff format --check .
-
-      - name: Run Ruff linters
-        run: poetry run ruff check .
