--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,8 @@ jobs:
 
       - name: Run tests 
         run: |
-          poetry run pytest . -v 
+          poetry run coverage run -m pytest .
+          poetry run coverage report -m 
         env:
           CI: true
 
