--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -30,7 +27,7 @@ jobs:
 
       - name: Run tests 
         run: |
-          poetry run coverage run -m pytest -p no:warnings . 
+          poetry run coverage run -m pytest -W ignore::TypeError . 
           poetry run coverage report -m 
 
 
