--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run tests 
         run: |
-          poetry run coverage run -m pytest -W ignore::TypeError . 
-          poetry run coverage report -m 
+          poetry run pytest -W ignore::TypeError . -v
+
 
 
